--- a/html/page2.html
+++ b/html/page2.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
+                    <h5>Sketch Post, May 10, 2025</h5>
+                    <h4>Sketch: May 9, 2025</h4>
+                    <p>Sketch Time: 28-minutes</p>
+                    <p>Okay... two ramp equipment in a row that aren't <a href="https://scryfall.com/card/ori/240/sword-of-the-animist" target="_blank">Sword of the Animist</a>. Though, I am interested in figuring out how to convey the diamond texturing of the pick if It makes the final list.</p>
+                    <img id="sketchDay72" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidjs5h37kvx4bmqpixai6b4apzbizk6j7hsbxlzbldwypljrmgdva@jpeg" height="200" alt="My sketch of Diamond Pick-Axe after 28 minutes.">
+                    <h6>My sketch of Diamond Pick-Axe after 28 minutes.</h6>
+                    <br>
+                    <img id="realDay72" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae30fa7-3d1d-417f-80d7-a668236cb2c1.jpg?1699044256" height="200" alt="(Original Artist: Dibujante Nocturno)"></img>
+                    <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 71: Lost Jitte (BIG)</h2>
                     <h5>Sketch Post, May 9, 2025</h5>
                     <h4>Sketch: May 8, 2025</h4>
@@ -54,19 +67,6 @@
                     <img id="realDay70" class="sketchImage" src="https://cards.scryfall.io/large/front/d/3/d3be4257-2316-4a2e-b347-f71c0368a947.jpg?1699044491" height="200" alt="(Original Artist: Ernanda Souza)">
                     <h6>(Original Artist: Ernanda Souza) <a href="https://scryfall.com/card/lci/213/spelunking" target="_blank" title="Spelunking">Scryfall Link</a></h6> 
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lop4resc2k24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">                    
-                    <h2>Day 69: Wayfarer's Bauble (TDC)</h2>
-                    <h5>Sketch Post, May 8, 2025</h5>           
-                    <h4>Sketch: May 6, 2025</h4>
-                    <p>Sketch Time: 30-minutes</p>
-                    <p>I remember a time when this card spiked to like $3. I'm glad to get it for this deck to help with fixing.</p>
-                    <img id="sketchDay69" class="sketchImage" src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibba373fnh2snomyli74xohd6nv52nirplkotriubecrya2pzipeu@jpeg" height="200" alt="My sketch of Wayfarer's Bauble after 30 minutes.">
-                    <h6>My sketch of Wayfarer's Bauble after 30 minutes.</h6>
-                    <br>   
-                    <img id="realDay69" class="sketchImage" src="https://cards.scryfall.io/large/front/a/c/ac1960a1-9141-468c-b96c-6c8e6905084d.jpg?1743207408" height="200" alt="(Original Artist: Tomas Duchek)">
-                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/tdc/335/wayfarers-bauble" target="_blank" title="Wayfarer's Bauble">Scryfall Link</a></h6> 
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lon2zhu5t226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
