--- a/html/page3.html
+++ b/html/page3.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="leftcolumn">
+                <div class="card post">                    
+                    <h2>Day 69: Wayfarer's Bauble (TDC)</h2>
+                    <h5>Sketch Post, May 8, 2025</h5>           
+                    <h4>Sketch: May 6, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>I remember a time when this card spiked to like $3. I'm glad to get it for this deck to help with fixing.</p>
+                    <img id="sketchDay69" class="sketchImage" src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibba373fnh2snomyli74xohd6nv52nirplkotriubecrya2pzipeu@jpeg" height="200" alt="My sketch of Wayfarer's Bauble after 30 minutes.">
+                    <h6>My sketch of Wayfarer's Bauble after 30 minutes.</h6>
+                    <br>   
+                    <img id="realDay69" class="sketchImage" src="https://cards.scryfall.io/large/front/a/c/ac1960a1-9141-468c-b96c-6c8e6905084d.jpg?1743207408" height="200" alt="(Original Artist: Tomas Duchek)">
+                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/tdc/335/wayfarers-bauble" target="_blank" title="Wayfarer's Bauble">Scryfall Link</a></h6> 
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lon2zhu5t226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>AN INTRODUCTORY POST</h2>
                     <h5>A "short "introduction, May 6, 2025</h5>
