--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 75: Talisman of Progress (TDC)</h2>
+                    <h5>Sketch Post, May 13, 2025</h5>
+                    <h4>Sketch: May 13, 2025</h4>
+                    <p>Sketch Time: 13-minutes</p>
+                    <p>I was very happy pulling this as a possibility for the random deck. The sketch was pretty fast, but I know I'm going to be looking up how to do the metallic effect when I get to painting.</p>
+                    <img id="sketchDay75" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihk56xwhtnwp4xnjue4poj6zvk6dctoxjbutln6b7x2c4comzzxgi@jpeg" height="200" alt="My sketch of Talisman of Progress after 13 minutes.">
+                    <h6>My sketch of Talisman of Progress after 13 minutes.</h6>
+                    <br>
+                    <img id="realDay75" class="sketchImage" src="https://cards.scryfall.io/large/front/9/d/9d6a5ed4-54b3-4660-8d41-953336f2fe74.jpg?1743207397" height="200" alt="(Original Artist: Mike Dringenberg)"></img>
+                    <h6>(Original Artist: Mike Dringenberg) <a href="https://scryfall.com/card/tdc/333/talisman-of-progress" target="_blank" title="Talisman of Progress">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp3p4ikrjk2w" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 74: Collective Voyage (C16)</h2>
                     <h5>Sketch Post, May 12, 2025</h5>
                     <h4>Sketch: May 11, 2025</h4>
@@ -47,7 +60,6 @@
                     <h5>About the Project Page, May 12, 2025</h5>
                     <p>I've added an <a href="https://stamayodesign.github.io/scryfall-random-sketch-commander/html/about.html">About the Project</a> page to the blog!</p>
                     <p>I go over how I came up with the project (expanding on the introductory post), how I'm going about randoomizing category of cards, and what the * in the header is all about.</p>
-                    
                 </div>
                 <div class="card post">
                     <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
@@ -61,19 +73,6 @@
                     <img id="realDay73" class="sketchImage" src="https://cards.scryfall.io/large/front/c/4/c477fb1a-5aac-4722-80d8-7570a8b09e44.jpg?1674138094" height="200" alt="(Original Artist: Volkan Baǵa)"></img>
                     <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/clb/343/vexing-puzzlebox" target="_blank" title="Vexing Puzzlebox">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lowr4o6mls2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
-                    <h5>Sketch Post, May 10, 2025</h5>
-                    <h4>Sketch: May 9, 2025</h4>
-                    <p>Sketch Time: 28-minutes</p>
-                    <p>Okay... two ramp equipment in a row that aren't <a href="https://scryfall.com/card/ori/240/sword-of-the-animist" target="_blank">Sword of the Animist</a>. Though, I am interested in figuring out how to convey the diamond texturing of the pick if It makes the final list.</p>
-                    <img id="sketchDay72" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidjs5h37kvx4bmqpixai6b4apzbizk6j7hsbxlzbldwypljrmgdva@jpeg" height="200" alt="My sketch of Diamond Pick-Axe after 28 minutes.">
-                    <h6>My sketch of Diamond Pick-Axe after 28 minutes.</h6>
-                    <br>
-                    <img id="realDay72" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae30fa7-3d1d-417f-80d7-a668236cb2c1.jpg?1699044256" height="200" alt="(Original Artist: Dibujante Nocturno)"></img>
-                    <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
