Day 76, added 4th page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,22 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 76: Sol Ring (LTC)</h2>
+                    <h5>Sketch Post, May 14, 2025</h5>
+                    <h4>Sketch: May 13, 2025</h4>
+                    <p>Sketch Time: 35-minutes</p>
+                    <p>I was worried about my ramp base in this randomized deck, but then I hit this! Scryfall has 109 unique entries for sol ring, so there was a "higher" chance of one of them popping up.</p>
+                    <img id="sketchDay76" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreih6qbia2ma6ie7xa5t2ksys6pr2j7wd5py5fojd3dykghmxugfomi@jpeg" height="200" alt="My sketch of Sol Ring after 35 minutes.">
+                    <h6>My sketch of Sol Ring after 35 minutes.</h6>
+                    <br>
+                    <img id="realDay76" class="sketchImage" src="https://cards.scryfall.io/large/front/6/0/60bc8cfc-8f68-4ec7-92a7-98380d92f69e.jpg?1740417457" height="200" alt="(Original Artist: Erikas Perl)"></img>
+                    <h6>(Original Artist: Erikas Perl) <a href="https://scryfall.com/card/ltc/409/sol-ring" target="_blank" title="Sol Ring">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp5yzg2iis2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 75: Talisman of Progress (TDC)</h2>
                     <h5>Sketch Post, May 13, 2025</h5>
-                    <h4>Sketch: May 13, 2025</h4>
+                    <h4>Sketch: May 12, 2025</h4>
                     <p>Sketch Time: 13-minutes</p>
                     <p>I was very happy pulling this as a possibility for the random deck. The sketch was pretty fast, but I know I'm going to be looking up how to do the metallic effect when I get to painting.</p>
                     <img id="sketchDay75" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihk56xwhtnwp4xnjue4poj6zvk6dctoxjbutln6b7x2c4comzzxgi@jpeg" height="200" alt="My sketch of Talisman of Progress after 13 minutes.">
@@ -54,25 +67,6 @@
                     <img id="realDay74" class="sketchImage" src="https://cards.scryfall.io/large/front/3/f/3f2d44f0-c71e-4061-bb7c-1f91fbce8f51.jpg?1562396584" height="200" alt="(Original Artist: Charles Urbach)"></img>
                     <h6>(Original Artist: Charles Urbach) <a href="https://scryfall.com/card/c16/145/collective-voyage" target="_blank" title="Collective Voyage">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lozimcm7hs2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Site Update!</h2>
-                    <h5>About the Project Page, May 12, 2025</h5>
-                    <p>I've added an <a href="https://stamayodesign.github.io/scryfall-random-sketch-commander/html/about.html">About the Project</a> page to the blog!</p>
-                    <p>I go over how I came up with the project (expanding on the introductory post), how I'm going about randoomizing category of cards, and what the * in the header is all about.</p>
-                </div>
-                <div class="card post">
-                    <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
-                    <h5>Sketch Post, May 11, 2025</h5>
-                    <h4>Sketch: May 10, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Most of the hour sketching this was adding the detail to the box until i just decided to stop. As for a ramp spell in the deck, it'll do the job. I don't think I've randomized any other dice cards.</p>
-                    <img id="sketchDay73" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigsxcoogkq3l3d5bdtibszxmxzmk7rmgmb3e23cgis6macfin4az4@jpeg" height="200" alt="My sketch of Vexing Puzzlebox after 60 minutes.">
-                    <h6>My sketch of Vexing Puzzlebox after 60 minutes.</h6>
-                    <br>
-                    <img id="realDay73" class="sketchImage" src="https://cards.scryfall.io/large/front/c/4/c477fb1a-5aac-4722-80d8-7570a8b09e44.jpg?1674138094" height="200" alt="(Original Artist: Volkan Baǵa)"></img>
-                    <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/clb/343/vexing-puzzlebox" target="_blank" title="Vexing Puzzlebox">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lowr4o6mls2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
