--- a/html/page4.html
+++ b/html/page4.html
@@ -8,7 +8,7 @@
         <title>Scryfall Random Sketch Commander Project</title>
     </head>
     <body onload="onPageLoad()">
-        <meta name="postPage" content="2">
+        <meta name="postPage" content="4">
         <div class="header">
             <h2>Scryfall Random* Sketch Commander Project</h2>                    
             <div class="row">
@@ -28,38 +28,16 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">
                 <div class="card post">
-                    <h2>Site Update!</h2>
-                    <h5>About the Project Page, May 12, 2025</h5>
-                    <p>I've added an <a href="https://stamayodesign.github.io/scryfall-random-sketch-commander/html/about.html">About the Project</a> page to the blog!</p>
-                    <p>I go over how I came up with the project (expanding on the introductory post), how I'm going about randoomizing category of cards, and what the * in the header is all about.</p>
-                </div>
-                <div class="card post">
-                    <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
-                    <h5>Sketch Post, May 11, 2025</h5>
-                    <h4>Sketch: May 10, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Most of the hour sketching this was adding the detail to the box until i just decided to stop. As for a ramp spell in the deck, it'll do the job. I don't think I've randomized any other dice cards.</p>
-                    <img id="sketchDay73" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigsxcoogkq3l3d5bdtibszxmxzmk7rmgmb3e23cgis6macfin4az4@jpeg" height="200" alt="My sketch of Vexing Puzzlebox after 60 minutes.">
-                    <h6>My sketch of Vexing Puzzlebox after 60 minutes.</h6>
-                    <br>
-                    <img id="realDay73" class="sketchImage" src="https://cards.scryfall.io/large/front/c/4/c477fb1a-5aac-4722-80d8-7570a8b09e44.jpg?1674138094" height="200" alt="(Original Artist: Volkan Baǵa)"></img>
-                    <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/clb/343/vexing-puzzlebox" target="_blank" title="Vexing Puzzlebox">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lowr4o6mls2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
-                    <h5>Sketch Post, May 10, 2025</h5>
-                    <h4>Sketch: May 9, 2025</h4>
-                    <p>Sketch Time: 28-minutes</p>
-                    <p>Okay... two ramp equipment in a row that aren't <a href="https://scryfall.com/card/ori/240/sword-of-the-animist" target="_blank">Sword of the Animist</a>. Though, I am interested in figuring out how to convey the diamond texturing of the pick if It makes the final list.</p>
-                    <img id="sketchDay72" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidjs5h37kvx4bmqpixai6b4apzbizk6j7hsbxlzbldwypljrmgdva@jpeg" height="200" alt="My sketch of Diamond Pick-Axe after 28 minutes.">
-                    <h6>My sketch of Diamond Pick-Axe after 28 minutes.</h6>
-                    <br>
-                    <img id="realDay72" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae30fa7-3d1d-417f-80d7-a668236cb2c1.jpg?1699044256" height="200" alt="(Original Artist: Dibujante Nocturno)"></img>
-                    <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <h2>AN INTRODUCTORY POST</h2>
+                    <h5>A "short "introduction, May 6, 2025</h5>
+                    <p>Hello! I've decided to go back to my digital media roots and make a website for a new project: <b>Scryfall Random* Sketch Commander.</b> I'll get to the asterik in a later post.</p>
+                    <p>On Feburary 26, 2025, I decided to get back into drawing by spending at least 10 minutes sketching something. I chose to use <a href="scryfall.com" target="_blank" title="scryfall.com">scryfall.com</a>, a search engine for Magic: the Gathering cards, to find inspiration. They have a feature where you can pull up a random card from their database. The first few days were creatures, so I decided to just do creature cards that came up.</p> 
+                    <p>After 30 days, I increased the amount of time drawing to 20 minutes. As I got closer to day 60, I decided that I wanted to create a commander deck.</p>
+                    <p>Days 61-67 were non-random cards I chose to be added to make the deck work more cohesively with the only WUBRG commander option, Sliver Hivelord, as I only had one sliver in the deck.</p>
+                    <p>For Days 68+ I will randomize ramp cards (-creature) for a certain amount of time. I don't know how many of these I will do, as other categories could cross-over, but I think I will end up making cuts for these categories anyways.</p>
+                    <p>You can see my progress on <a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social" title="sorocoroto.bsky.social">my bluesky account</a>.</p>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
