Day 78 (2 sketches) and page 5

--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
         </div>
         <div class="row">
             <div class="leftcolumn">  
+                    <div class="card post">
+                    <h2>Day 78-2: Warp World (M10)</h2>
+                    <h5>Sketch Post, May 16, 2025</h5>
+                    <h4>Sketch: May 15, 2025</h4>
+                    <p>Sketch Time: 62-minutes</p>
+                    <p>I sketched the last card around 2AM, but I wanted to draw more later in the day (thus Day 78-2). This was scryfall's response to not just taking a break, another technically "ramp" card for the deck.</p>
+                    <img id="sketchDay78-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiduekigvkdkmmnnepuss73guehomuols63kver4ixirl6tl7enj4e@jpeg" height="200" alt="My sketch of Warp World after 62 minutes.">
+                    <h6>My sketch of Warp World after 62 minutes.</h6>
+                    <br>
+                    <img id="realDay78-2" class="sketchImage" src="https://cards.scryfall.io/large/front/a/a/aa6e1fb5-a06b-4e10-8cc7-785e0f0b298e.jpg?1561991614" height="200" alt="(Original Artist: Ron Spencer)"></img>
+                    <h6>(Original Artist: Ron Spencer) <a href="https://scryfall.com/card/m10/163/warp-world" target="_blank" title="Warp World">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgvtl5l223" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 78-1: Primal Growth (CMA)</h2>
+                    <h5>Sketch Post, May 16, 2025</h5>
+                    <h4>Sketch: May 15, 2025</h4>
+                    <p>Sketch Time: 55-minutes</p>
+                    <p>I just noticed this doesn't put the basic land(s) into play tapped while writing this. Neat. Also if the card requires a kicker cost of sacrificing a creature, why person not also turning into tree?</p>
+                    <img id="sketchDay78-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiak5aotjvf6gbp6hjaxz2zswp3ye2iymxvqtv3xnyxdoapgxlzm7e@jpeg" height="200" alt="My sketch of Primal Growth after 55 minutes.">
+                    <h6>My sketch of Primal Growth after 55 minutes.</h6>
+                    <br>
+                    <img id="realDay78-1" class="sketchImage" src="https://cards.scryfall.io/large/front/6/6/6664675f-1ef6-49ba-8f08-cfeac2f38ec7.jpg?1592673136" height="200" alt="(Original Artist: rk post)"></img>
+                    <h6>(Original Artist: rk post) <a href="https://scryfall.com/card/cma/137/primal-growth" target="_blank" title="Primal Growth">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgcqgg5c2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 77: Coveted Jewel (FIC)</h2>
                     <h5>Sketch Post, May 15, 2025</h5>
@@ -41,32 +67,6 @@
                     <img id="realDay77" class="sketchImage" src="https://cards.scryfall.io/large/front/5/b/5b4ce244-d34f-4e96-9fe5-a0a8cefb92c7.jpg?1747081739" height="200" alt="(Original Artist: Bruno Biazotto)"></img>
                     <h6>(Original Artist: Bruno Biazotto) <a href="https://scryfall.com/card/fic/341/coveted-jewel" target="_blank" title="Coveted Jewel">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lparikka4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 76: Sol Ring (LTC)</h2>
-                    <h5>Sketch Post, May 14, 2025</h5>
-                    <h4>Sketch: May 13, 2025</h4>
-                    <p>Sketch Time: 35-minutes</p>
-                    <p>I was worried about my ramp base in this randomized deck, but then I hit this! Scryfall has 109 unique entries for sol ring, so there was a "higher" chance of one of them popping up.</p>
-                    <img id="sketchDay76" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreih6qbia2ma6ie7xa5t2ksys6pr2j7wd5py5fojd3dykghmxugfomi@jpeg" height="200" alt="My sketch of Sol Ring after 35 minutes.">
-                    <h6>My sketch of Sol Ring after 35 minutes.</h6>
-                    <br>
-                    <img id="realDay76" class="sketchImage" src="https://cards.scryfall.io/large/front/6/0/60bc8cfc-8f68-4ec7-92a7-98380d92f69e.jpg?1740417457" height="200" alt="(Original Artist: Erikas Perl)"></img>
-                    <h6>(Original Artist: Erikas Perl) <a href="https://scryfall.com/card/ltc/409/sol-ring" target="_blank" title="Sol Ring">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp5yzg2iis2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 75: Talisman of Progress (TDC)</h2>
-                    <h5>Sketch Post, May 13, 2025</h5>
-                    <h4>Sketch: May 12, 2025</h4>
-                    <p>Sketch Time: 13-minutes</p>
-                    <p>I was very happy pulling this as a possibility for the random deck. The sketch was pretty fast, but I know I'm going to be looking up how to do the metallic effect when I get to painting.</p>
-                    <img id="sketchDay75" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihk56xwhtnwp4xnjue4poj6zvk6dctoxjbutln6b7x2c4comzzxgi@jpeg" height="200" alt="My sketch of Talisman of Progress after 13 minutes.">
-                    <h6>My sketch of Talisman of Progress after 13 minutes.</h6>
-                    <br>
-                    <img id="realDay75" class="sketchImage" src="https://cards.scryfall.io/large/front/9/d/9d6a5ed4-54b3-4660-8d41-953336f2fe74.jpg?1743207397" height="200" alt="(Original Artist: Mike Dringenberg)"></img>
-                    <h6>(Original Artist: Mike Dringenberg) <a href="https://scryfall.com/card/tdc/333/talisman-of-progress" target="_blank" title="Talisman of Progress">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp3p4ikrjk2w" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
