Updated Profile Picture

--- a/html/page5.html
+++ b/html/page5.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="card">
                     <h2>About Me</h2>
-                    <img class="avatar" src="../img/avatar_01.jpg" alt="Avatar">
+                    <img class="avatar" src="../img/avatar_02.png" alt="Avatar">
                     <p>My name is Steve. I am a programmer who has studied electrical engineering and likes Magic: the Gathering.</p>
                 </div>
                 <div class="card followme">
