--- a/html/page2.html
+++ b/html/page2.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 77: Coveted Jewel (FIC)</h2>
+                    <h5>Sketch Post, May 15, 2025</h5>
+                    <h4>Sketch: May 14, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Finding out this card has new FF14 art through scryfall/random was a fun surprise. The 👀Crystal Exarch👀 is one of my favorite characters along with the other azure dragoon and Urianger.</p>
+                    <img id="sketchDay77" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigxrxkopwasscsk4cn7atgsyzbmlunddsgasy4bub67jc3duqbqhy@jpeg" height="200" alt="My sketch of Coveted Jewel after 60 minutes.">
+                    <h6>My sketch of Coveted Jewel after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay77" class="sketchImage" src="https://cards.scryfall.io/large/front/5/b/5b4ce244-d34f-4e96-9fe5-a0a8cefb92c7.jpg?1747081739" height="200" alt="(Original Artist: Bruno Biazotto)"></img>
+                    <h6>(Original Artist: Bruno Biazotto) <a href="https://scryfall.com/card/fic/341/coveted-jewel" target="_blank" title="Coveted Jewel">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lparikka4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 76: Sol Ring (LTC)</h2>
                     <h5>Sketch Post, May 14, 2025</h5>
                     <h4>Sketch: May 13, 2025</h4>
@@ -54,19 +67,6 @@
                     <img id="realDay75" class="sketchImage" src="https://cards.scryfall.io/large/front/9/d/9d6a5ed4-54b3-4660-8d41-953336f2fe74.jpg?1743207397" height="200" alt="(Original Artist: Mike Dringenberg)"></img>
                     <h6>(Original Artist: Mike Dringenberg) <a href="https://scryfall.com/card/tdc/333/talisman-of-progress" target="_blank" title="Talisman of Progress">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp3p4ikrjk2w" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 74: Collective Voyage (C16)</h2>
-                    <h5>Sketch Post, May 12, 2025</h5>
-                    <h4>Sketch: May 11, 2025</h4>
-                    <p>Sketch Time: 30-minutes</p>
-                    <p>Me Ramping? No, We Ramping, Comrade. Just don't forget who got you those basics when you get to untap with them before me.🤞</p>
-                    <img id="sketchDay74" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibkmw7kr6nnfokyoold2sa2c7nvqyoh4qq42inyykjngzbdwkyo6q@jpeg" height="200" alt="My sketch of Collective Voyage after 30 minutes.">
-                    <h6>My sketch of Collective Voyage after 30 minutes.</h6>
-                    <br>
-                    <img id="realDay74" class="sketchImage" src="https://cards.scryfall.io/large/front/3/f/3f2d44f0-c71e-4061-bb7c-1f91fbce8f51.jpg?1562396584" height="200" alt="(Original Artist: Charles Urbach)"></img>
-                    <h6>(Original Artist: Charles Urbach) <a href="https://scryfall.com/card/c16/145/collective-voyage" target="_blank" title="Collective Voyage">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lozimcm7hs2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
