--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
         </div>
         <div class="row">
             <div class="leftcolumn">  
-                    <div class="card post">
+                <div class="card post">
+                    <h2>Day 79: Chrome Mox (2XM)</h2>
+                    <h5>Sketch Post, May 17, 2025</h5>
+                    <h4>Sketch: May 16, 2025</h4>
+                    <p>Sketch Time: 21-minutes</p>
+                    <p>First game changer I got from scryfall/random. I've never played with moxes before, but I don't see it fitting the vibe coming to a new bracket 1 table, even when the deck is randomly generated.</p>
+                    <img id="sketchDay79" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiajstqb5djn5pq7knihvo3xlxcc4anofdckwzr5mjjowc4fjo4qei@jpeg" height="200" alt="My sketch of Chrome Mox after 21 minutes.">
+                    <h6>My sketch of Chrome Mox after 21 minutes.</h6>
+                    <br>
+                    <img id="realDay79" class="sketchImage" src="https://cards.scryfall.io/large/front/0/e/0e94d334-e043-42f2-ba5c-be497d82f2c8.jpg?1599711293" height="200" alt="(Original Artist: Franz Vohwinkel)"></img>
+                    <h6>(Original Artist: Franz Vohwinkel) <a href="https://scryfall.com/card/2xm/358/chrome-mox" target="_blank" title="Chrome Mox">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpfpd6xwi22n" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 78-2: Warp World (M10)</h2>
                     <h5>Sketch Post, May 16, 2025</h5>
                     <h4>Sketch: May 15, 2025</h4>
@@ -54,19 +67,6 @@
                     <img id="realDay78-1" class="sketchImage" src="https://cards.scryfall.io/large/front/6/6/6664675f-1ef6-49ba-8f08-cfeac2f38ec7.jpg?1592673136" height="200" alt="(Original Artist: rk post)"></img>
                     <h6>(Original Artist: rk post) <a href="https://scryfall.com/card/cma/137/primal-growth" target="_blank" title="Primal Growth">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgcqgg5c2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 77: Coveted Jewel (FIC)</h2>
-                    <h5>Sketch Post, May 15, 2025</h5>
-                    <h4>Sketch: May 14, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Finding out this card has new FF14 art through scryfall/random was a fun surprise. The 👀Crystal Exarch👀 is one of my favorite characters along with the other azure dragoon and Urianger.</p>
-                    <img id="sketchDay77" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigxrxkopwasscsk4cn7atgsyzbmlunddsgasy4bub67jc3duqbqhy@jpeg" height="200" alt="My sketch of Coveted Jewel after 60 minutes.">
-                    <h6>My sketch of Coveted Jewel after 60 minutes.</h6>
-                    <br>
-                    <img id="realDay77" class="sketchImage" src="https://cards.scryfall.io/large/front/5/b/5b4ce244-d34f-4e96-9fe5-a0a8cefb92c7.jpg?1747081739" height="200" alt="(Original Artist: Bruno Biazotto)"></img>
-                    <h6>(Original Artist: Bruno Biazotto) <a href="https://scryfall.com/card/fic/341/coveted-jewel" target="_blank" title="Coveted Jewel">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lparikka4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
